# flowwispr

./: .gitignore  Package.resolved  Package.swift  README.md
.github/workflows/: release.yml  validate.yml
Sources/CFlow/: shim.c
Sources/CFlow/include/: flow.h  flowwispr.h  module.modulemap
Sources/CFlowWispr/include/: flowwispr.h
Sources/Flow/: Flow.swift  FlowWispr.swift  TranscriptionSummary.swift
Sources/FlowApp/: AXEditMonitorService.swift  AccessibilityContext.swift  Analytics.swift  AppDelegate.swift  AppState.swift  AppTab.swift  AudioFeedback.swift  ContentView.swift  CorrectionsView.swift  EditLearningService.swift  FlowApp.swift  GlobeKeyHandler.swift  HistoryView.swift  Hotkey.swift  LearnedWordsToast.swift  MenuBarView.swift  OnboardingView.swift  RecordView.swift  RecordingIndicatorWindow.swift  SettingsView.swift  ShortcutsView.swift  Theme.swift  WaveformView.swift  WindowManager.swift
Sources/FlowApp/Resources/Assets.xcassets/AppIconOldImage.imageset/: Contents.json
Sources/FlowWhisprApp/: WindowManager.swift
Sources/FlowWispr/: FlowWispr.swift
Sources/FlowWisprApp/: AppState.swift  AppTab.swift  ContentView.swift  FlowWisprApp.swift  RecordView.swift  RecordingIndicatorWindow.swift  WaveformView.swift
base10-worker/: Cargo.toml  wrangler.toml
base10-worker/src/: lib.rs
flow-core/: Cargo.toml  README.md  build.rs  cbindgen.toml
flow-core/migrations/: 001_initial_schema.sql  002_add_edit_analytics.sql
flow-core/src/: alignment.rs  apps.rs  audio.rs  contacts.rs  error.rs  ffi.rs  learning.rs  lib.rs  macos_messages.rs  metrics.rs  migrations.rs  modes.rs  shortcuts.rs  storage.rs  types.rs  vad.rs  voice_commands.rs  whisper_models.rs
flow-core/src/providers/: auto.rs  base10.rs  completion.rs  gemini.rs  local_whisper.rs  mod.rs  openai.rs  transcription.rs
flow-core/swift/: ContactsBridge.swift
flow-core/tests/: e2e_pipeline_test.rs  ffi_test.rs  storage_test.rs
flow-worker/: Cargo.toml  README.md  wrangler.toml
flow-worker/src/: lib.rs
flowwhispr-core/src/: apps.rs  metrics.rs
flowwhispr-core/src/providers/: anthropic.rs  streaming.rs
flowwispr-core/: Cargo.toml
flowwispr-core/src/: ffi.rs  lib.rs  storage.rs  whisper_models.rs
flowwispr-core/src/providers/: local_whisper.rs  mod.rs  openrouter.rs
