[package]
name = "flow"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# ONNX Runtime for Silero VAD (TODO: update to stable v2 when released)
# ort = { version = "2.0.0-rc.11", default-features = false, features = ["coreml"] }
ndarray = "0.16"

aho-corasick = "1.1.4"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
cpal = "0.17.1"
dirs = "6.0.0"
futures = "0.3"
parking_lot = "0.12.5"
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
regex = "1"
anyhow = "1"
byteorder = "1.5"
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = ["metal", "accelerate"] }
hf-hub = { version = "0.4.1", features = ["tokio"] }
hound = "3"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
